[tool.poetry]
name = "co2-emmission"
version = "0.1.0"
description = "this python program generates the an intereactive dashboard using co2 emmission data"
authors = ["ShanKonduru <ShanKonduru@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "co2_emmission"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
numpy = "^1.26.4"
panel = "^1.3.8"
hvplot = "^0.9.2"

[tool.poetry.group.dev.dependencies]
hvplot = "^0.9.2"
panel = "^1.3.8"
numpy = "^1.26.4"
pandas = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
